--- a/projeto-3-DIO-HTML/index.html
+++ b/projeto-3-DIO-HTML/index.html
@@ -18,7 +18,7 @@
     <div id="avaliar">
         <nav class="bar" aria-label="Barra de navegação principal">
             <ul>
-                <li><a id="linkBlue" href="avaliacao.html" title="Navegar para o Link 1" aria-label="Link 1 na barra de navegação">Avalie-nos</a></li>
+               <li><a id="linkBlue" href="avaliacao.html" target="_blank" title="Navegar para o Link 1" aria-label="Link 1 na barra de navegação">Avalie-nos</a></li>
             </ul>
       
         </nav>
